# farmed4u_artemis

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 22a2e371f72a_create_child_cateogries.py  22e1d70e8873_refactor_category_model.py  40640a4a84bf_update_category_set_title_field_unique.py  45e7c3fa4cc7_create_category_schema_migration.py  4abff45e61f9_refactor_mode_subcategories.py  4acccd7899d1_drop_sub_categories_model.py  80cb27b9b0fc_refactor_foreignkey_relationship.py  9e942d4843d2_update_category_schema_migration.py  db1aa557ba38_subcategories_model.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: test.py
app/api/utils/: dependencies.py
app/core/: conf.py
app/crud/: category.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  category.py
app/schemas/: __init__.py  category.py
app/utils/: logging.py
